Add printer styles

--- a/index.erb
+++ b/index.erb
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=680, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="css/screen.css">
+    <link rel="stylesheet" href="css/print.css">
     <link rel="stylesheet" href="css/pygments/<%= meta.pygments_style %>.css">
     <% meta.css.each do |css| %>
       <link rel="stylesheet" href="<%= css %>">
