--- a/index.erb
+++ b/index.erb
@@ -14,6 +14,7 @@
     <% end %>
     <script src="js/jquery-2.1.0.min.js"></script>
     <script src="js/highcharts.js"></script>
+    <%= File.read("head.html") if File.exist?("head.html") %>
   </head>
   <body class="list">
     <header class="caption">
